style(font) add font-display swap property to prevent FOIT
prevent flash of invisible text by using this property

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ html {
 @font-face {
   font-family: "Roboto Slab";
   src: url("./assets/fonts/RobotoSlab/RobotoSlab-VariableFont_wght.ttf");
+  font-display: swap;
 }
 
 .body {
